* ordinate() wrapper, calculates many different ordination methods.
* General importer for all supported data formats: import()
* BIOM format import: import_biom() function
* Support for Double Principle Coordinate Analysis (DPCoA)
* Several published exampled datasets included
* Bioconductor development release updates.
* Lots of documentation updates.
* Lots and lots of fixes and improvements.

phyloseq 1.3.23 - bug fix for transform_sample_counts
===========
Only appears to affect OTU tables in the "taxa are columns" orientation.
It is the result of a surprising behavior of the apply() function,
which in this circumstance transposes the table.

phyloseq 1.3.22 - additional tests for prun_*() and phyloseq() functions
===========
Before releasing v1.3.21 on GitHub:master some gaps in re-order checking were noticed. 
These are now caught by new unit tests and phyloseq/prune/etc have been further revised to ensure that properly-ordered OTUs are not disordered during a pruning step.

phyloseq 1.3.21 - accessor efficiency
===========
For instance, ntaxa() and taxa_names() are very slow on large dataset
Some of the highly inefficient approaches are now replaced. 
The strategy is described further in the related GitHub issue:
https://github.com/joey711/phyloseq/issues/183


phyloseq 1.3.20 - reference sequence class update.
===========
- formally define the new version of phyloseq-class with refseq slot included
- new/augmented accessors:
	- taxa_names
	- ntaxa
	- refseq
- phyloseq() constructor now supports XStringSet components
- reconcile_species internal function removed/replaced
	- reconcile_species removed from constructor and package. internal, so no need to deprecate.
- check the component slot list provided by the "splat" infrastructure
- prune_taxa
- Rebuild current example data.
- print/show methods. 
- subset_taxa
- add refseq (XStringSet) object argument to import functions.
	- import_qiime
	- import_biom
- merge_phyloseq
	- works with refseq data