@@ -1,6 +1,6 @@
 Package: phyloseq
-Version: 1.4.2
-Date: 2013-04-22
+Version: 1.4.3
+Date: 2013-05-21
 Title: Handling and analysis of high-throughput microbiome
     census data.
 Description: phyloseq provides a set of classes and tools
@@ -35,7 +35,8 @@ Enhances: doParallel (>= 1.0.1)
 biocViews: Clustering, Classification, MultipleComparisons,
     QualityControl, GeneticVariability,
     HighThroughputSequencing
-URL: http://joey711.github.com/phyloseq/
+URL: http://dx.plos.org/10.1371/journal.pone.0061217,
+    http://joey711.github.io/phyloseq/
 BugReports: https://github.com/joey711/phyloseq/issues
 Collate:
     'allClasses.R'
