@@ -18,6 +18,11 @@ phyloseq
 * Lots of documentation updates.
 * Lots and lots of fixes and improvements.
 
+phyloseq 1.4.3 - Speed improvement for import_biom
+===========
+- Fixed speed bottleneck for sparse matrices in import_biom().
+- Update package URL to reflect new article and updated GitHub devel link
+
 phyloseq 1.3.23 - bug fix for transform_sample_counts
 ===========
 Only appears to affect OTU tables in the "taxa are columns" orientation.
